Bug 1594608: Use the focused remote browser for context menu key events. r=hsivonen

Even though context menu key events are caused by a key press, they get handled as mouse events.
Because the parent process FocusManager only knows about top level remote browsers, the event can only be targeted to a top level remote browser, even if the focus is actually in an OOP iframe.
To fix this, when dispatching cross-process events, handle context menu key events the same way we handle normal keyboard events; i.e. use the focused remote browser.

Differential Revision: https://phabricator.services.mozilla.com/D54245